test/spec_vectors/simd_int_to_int_extend/fail/module_13.wat
(module (func $i16x8.extend_high_i8x16_s-arg-empty (result v128) (i16x8.extend_high_i8x16_s)))